--- a/gradle.properties
+++ b/gradle.properties
@@ -8,15 +8,17 @@ minecraft_version_range=[1.18,1.19)
 forge_version=39.0.0
 forge_version_range=[39,)
 loader_version_range=[39,)
+nyfsquivers_version_range=[1.18.1-0.6.3,)
 mappings_channel=official
 mappings_version=1.18.1
 
-mod_id=examplemod
-mod_name=ExampleMod
-mod_version=1.0.0
-mod_base_package=me.sizableshrimp.examplemod
-mod_authors=SizableShrimp
-mod_description=Example mod description\nNewline characters can be used and will be replaced properly
+mod_id=nyfsquiversexpanded
+mod_name=Nyfs Quivers Expanded
+mod_version=0.1.0
+mod_base_package=com.nyfaria.nyfsquiversexpanded
+mod_authors=Nyfaria
+mod_description=A Modded Expansion for Nyf's Quivers
 
 # Dependencies
 mixin_version=0.8.5
+quiver_version=1.18.1-0.6.3
